--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,78 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@font-face {
+    font-family: "GreyCliffCF";
+    src: url("./fonts/GreyCliffCF/greycliffcf-thin.otf") format("truetype");
+    font-weight: 100;
+    font-style: normal;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@font-face {
+    font-family: "GreyCliffCF";
+    src: url("./fonts/GreyCliffCF/greycliffcf-extralight.otf") format("truetype");
+    font-weight: 200;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: "GreyCliffCF";
+    src: url("./fonts/GreyCliffCF/greycliffcf-light.otf") format("truetype");
+    font-weight: 300;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: "GreyCliffCF";
+    src: url("./fonts/GreyCliffCF/greycliffcf-regular.otf") format("truetype");
+    font-weight: 400;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: "GreyCliffCF";
+    src: url("./fonts/GreyCliffCF/greycliffcf-medium.otf") format("truetype");
+    font-weight: 500;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: "GreyCliffCF";
+    src: url("./fonts/GreyCliffCF/greycliffcf-demibold.otf") format("truetype");
+    font-weight: 600;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: "GreyCliffCF";
+    src: url("./fonts/GreyCliffCF/greycliffCF-bold.ttf") format("truetype");
+    font-weight: 700;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: "GreyCliffCF";
+    src: url("./fonts/GreyCliffCF/greycliffcf-extrabold.otf") format("truetype");
+    font-weight: 800;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: "GreyCliffCF";
+    src: url("./fonts/GreyCliffCF/greycliffcf-heavy.otf") format("truetype");
+    font-weight: 900;
+    font-style: normal;
+}
+
+body {
+    font-family: "GreyCliffCF", sans-serif;
+}
+
+h1, h2, h3, h4, h5, h6, span {
+    font-weight: 700;
+}
+
+p {
+    font-weight: 400;
 }
