--- a/src/index.css
+++ b/src/index.css
@@ -4,43 +4,8 @@
 
 @font-face {
     font-family: "GreyCliffCF";
-    src: url("./fonts/GreyCliffCF/greycliffcf-thin.otf") format("truetype");
-    font-weight: 100;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: "GreyCliffCF";
-    src: url("./fonts/GreyCliffCF/greycliffcf-extralight.otf") format("truetype");
-    font-weight: 200;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: "GreyCliffCF";
-    src: url("./fonts/GreyCliffCF/greycliffcf-light.otf") format("truetype");
-    font-weight: 300;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: "GreyCliffCF";
-    src: url("./fonts/GreyCliffCF/greycliffcf-regular.otf") format("truetype");
+    src: url("./fonts/GreyCliffCF/greycliffcf-regular.ttf") format("truetype");
     font-weight: 400;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: "GreyCliffCF";
-    src: url("./fonts/GreyCliffCF/greycliffcf-medium.otf") format("truetype");
-    font-weight: 500;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: "GreyCliffCF";
-    src: url("./fonts/GreyCliffCF/greycliffcf-demibold.otf") format("truetype");
-    font-weight: 600;
     font-style: normal;
 }
 
@@ -51,22 +16,17 @@
     font-style: normal;
 }
 
-@font-face {
-    font-family: "GreyCliffCF";
-    src: url("./fonts/GreyCliffCF/greycliffcf-extrabold.otf") format("truetype");
-    font-weight: 800;
-    font-style: normal;
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    font-family: "GreyCliffCF", sans-serif;
 }
 
-@font-face {
-    font-family: "GreyCliffCF";
-    src: url("./fonts/GreyCliffCF/greycliffcf-heavy.otf") format("truetype");
-    font-weight: 900;
-    font-style: normal;
-}
 
 body {
-    font-family: "GreyCliffCF", sans-serif;
+    color: white;
+    background-color: #313539;
 }
 
 h1, h2, h3, h4, h5, h6, span {
@@ -76,3 +36,33 @@ h1, h2, h3, h4, h5, h6, span {
 p {
     font-weight: 400;
 }
+
+h1 {
+    font-size: 3em;
+}
+
+@media screen and (min-width: 1040px) {
+    .navbar {
+        left: 0;
+        position: relative;
+    }
+}
+
+
+@media screen and (max-width: 1040px) {
+    .navbar {
+        transition: 0.3s;
+    }
+
+    .navbar li {
+        padding: 1rem 0;
+    }
+
+    .navbar li a {
+        font-size: 1.3rem;
+    }
+
+
+}
+
+
