[+] style : homepage content

--- a/src/index.css
+++ b/src/index.css
@@ -37,8 +37,12 @@ p {
     font-weight: 400;
 }
 
-h1 {
+h1, h2 {
     font-size: 3em;
+}
+
+h2 {
+    line-height: 60px;
 }
 
 @media screen and (min-width: 1040px) {
@@ -50,6 +54,12 @@ h1 {
 
 
 @media screen and (max-width: 1040px) {
+    h2 {
+        font-size: 2em;
+        line-height: 40px;
+    }
+
+
     .navbar {
         transition: 0.3s;
     }
@@ -63,6 +73,21 @@ h1 {
     }
 
 
+}
+
+
+@media screen and (max-width: 768px) {
+    h2 {
+        font-size: 1.3em;
+        line-height: 30px;
+    }
+}
+
+
+
+
+.player-wrapper {
+    height: 100%;
 }
 
 
