--- a/src/index.css
+++ b/src/index.css
@@ -37,11 +37,12 @@ p {
     font-weight: 400;
 }
 
-h1, h2 {
+h1 {
     font-size: 3em;
 }
 
 h2 {
+    font-size:2.7em;
     line-height: 60px;
 }
 
@@ -78,7 +79,7 @@ h2 {
 
 @media screen and (max-width: 768px) {
     h2 {
-        font-size: 1.3em;
+        font-size: 1.6em;
         line-height: 30px;
     }
 }
