--- a/src/index.css
+++ b/src/index.css
@@ -38,7 +38,8 @@ p {
 }
 
 h1 {
-    font-size: 3em;
+    font-size: 6em;
+    line-height: 90px;
 }
 
 h2 {
@@ -50,6 +51,47 @@ svg {
     color: white;
 }
 
+input, textarea{
+    border-radius: 10px;
+    margin-top: 0.3em;
+    color: black;
+    padding: 10px;
+    background-color: #292D30 ;
+}
+
+input[type=submit] {
+    color: white !important;
+    margin-top: 2.3em !important;
+}
+
+input:-webkit-autofill,
+input:-webkit-autofill:focus {
+    transition: background-color 600000s 0s, color 600000s 0s;
+}
+input[data-autocompleted] {
+    background-color: transparent !important;
+}
+
+input:-webkit-autofill{
+    -webkit-text-fill-color: white !important;
+}
+
+
+
+
+.player-wrapper {
+    height: 100%;
+}
+
+
+.MuiAccordion-rounded {
+    border-radius: 10px !important;
+}
+
+
+
+/*Responsive*/
+
 @media screen and (min-width: 1040px) {
     .navbar {
         left: 0;
@@ -59,6 +101,11 @@ svg {
 
 
 @media screen and (max-width: 1040px) {
+    h1 {
+        font-size: 2.8em;
+        line-height: 50px;
+    }
+
     h2 {
         font-size: 2em;
         line-height: 40px;
@@ -91,8 +138,6 @@ svg {
 
 
 
-.player-wrapper {
-    height: 100%;
-}
+
 
 
