--- a/src/index.css
+++ b/src/index.css
@@ -11,10 +11,19 @@
 
 @font-face {
     font-family: "GreyCliffCF";
+    src: url("fonts/GreyCliffCF/greycliffCF-demibold.ttf") format("truetype");
+    font-weight: 600;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: "GreyCliffCF";
     src: url("./fonts/GreyCliffCF/greycliffCF-bold.ttf") format("truetype");
     font-weight: 700;
     font-style: normal;
 }
+
+
 
 * {
     box-sizing: border-box;
@@ -44,7 +53,7 @@ h1 {
 
 h2 {
     font-size:2.7em;
-    line-height: 60px;
+    line-height: 50px;
 }
 
 svg {
@@ -54,7 +63,7 @@ svg {
 input, textarea{
     border-radius: 10px;
     margin-top: 0.3em;
-    color: black;
+    color: white;
     padding: 10px;
     background-color: #292D30 ;
 }
@@ -77,6 +86,13 @@ input:-webkit-autofill{
 }
 
 
+.circle-boxShadow {
+    -webkit-box-shadow: 0px -1px 15px 1px rgba(230,61,49,0.7);
+    box-shadow: 0px -1px 15px 1px rgba(230,61,49,0.7);
+}
+
+
+
 
 
 .player-wrapper {
@@ -87,6 +103,7 @@ input:-webkit-autofill{
 .MuiAccordion-rounded {
     border-radius: 10px !important;
 }
+
 
 
 
