--- a/src/index.css
+++ b/src/index.css
@@ -86,6 +86,12 @@ input:-webkit-autofill{
 }
 
 
+.center-absolute {
+    left: 50%;
+    transform: translate(-50%, 0);
+}
+
+
 .circle-boxShadow {
     -webkit-box-shadow: 0px -1px 15px 1px rgba(230,61,49,0.7);
     box-shadow: 0px -1px 15px 1px rgba(230,61,49,0.7);
@@ -103,6 +109,7 @@ input:-webkit-autofill{
 .MuiAccordion-rounded {
     border-radius: 10px !important;
 }
+
 
 
 
