[+] reverse animations + masonry style

--- a/src/index.css
+++ b/src/index.css
@@ -35,9 +35,13 @@
 body {
     background-color: #313539;
     color: white;
-    height: 100vh;
     transition: background-color 1s ease;
 }
+
+.has-scroll-smooth [data-scroll-container] {
+    overflow: auto !important;
+}
+
 
 
 
@@ -126,21 +130,9 @@ input:-webkit-autofill{
     box-shadow: 0px -1px 15px 1px rgba(230,61,49,0.7);
 }
 
-.scrollbar-thumb {
-    background-color: black !important;
-    width: 6px !important;
-}
-
-.scrollbar-track-y {
-    background-color: transparent !important;
-    width: 6px !important;
-}
 
 
 
-.disparition {
-    animation: disparition-to-top 2s, fade-effect-disparition 0.5s;
-}
 
 
 .apparition-from-bottom-text {
@@ -151,12 +143,6 @@ input:-webkit-autofill{
     animation: fadeIn 5s, section-bottom-to-top 3s;
     animation-iteration-count: 1;
 }
-
-
-.animation-stop {
-    animation-play-state: paused;
-}
-
 
 .apparition-from-bottom-hamburger-menu {
     animation: fadeIn 6s, text-bottom-to-top 4s;
@@ -180,7 +166,9 @@ fade-animation {
 }
 
 
-
+.animation-direction-reverse {
+    animation-direction:reverse;
+}
 
 
 
@@ -190,22 +178,6 @@ fade-animation {
     50%{opacity: 1;}
 }
 
-
-@keyframes bounceEffect {
-    0%{top:-100%; right:-50%;  height: 500px; width: 500px}
-}
-
-
-@keyframes disparition-to-top {
-    0% {margin-top: 0}
-    100% {margin-top: -300%}
-}
-
-@keyframes fade-effect-disparition {
-    0%{ opacity: 1;}
-    30%{ opacity : 1;}
-    70%{opacity: 0;}
-}
 
 
 
@@ -234,8 +206,6 @@ fade-animation {
     40% {bottom: 20px}
     100% {bottom: 60px}
 }
-
-
 
 
 
