--- a/src/index.css
+++ b/src/index.css
@@ -36,7 +36,16 @@ body {
     background-color: #303539;
     color : white;
     overflow: hidden;
+    min-height: 100vh;
+    min-height: -webkit-fill-available !important;
 }
+
+
+html, .heightfix-ios {
+    height: -webkit-fill-available !important;
+}
+
+
 
 
 h1, h2, h3, h4, h5, h6, span {
@@ -51,7 +60,6 @@ p, li {
 
 h1 {
     font-size: 3.5em;
-    line-height: 70px;
 }
 
 h2 {
@@ -72,17 +80,31 @@ svg {
     color: white;
 }
 
+
 input, textarea{
     border-radius: 10px;
     margin-top: 0.3em;
     padding: 10px;
-    background-color: #292D30 ;
+    background-color: #292D30 !important;
+    color : white !important;
 }
 
 
 
+input:focus, textarea:focus {
+    outline: 1px solid white !important;
+}
+
+
 input[data-autocompleted] {
     background-color: transparent !important;
+}
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active{
+    -webkit-box-shadow: 0 0 0 30px white inset !important;
 }
 
 *::-webkit-media-controls-start-playback-button {
@@ -112,13 +134,6 @@ input[data-autocompleted] {
     bottom: 3rem;
     left: 50%;
     transform: translate(-50%, -50%);
-}
-
-.absolute-vertical-center-mobile {
-    position: absolute;
-    top: 50%;
-    left: 1.75rem !important;
-    transform: translate(-0%, -50%);
 }
 
 
@@ -167,6 +182,14 @@ input[data-autocompleted] {
 
 @media screen and (max-width: 768px) {
 
+    .absolute-vertical-center-mobile {
+        position: absolute;
+        top: 50%;
+        left: 1.75rem !important;
+        transform: translate(-0%, -50%);
+    }
+
+
     .absolute-vertical-center-mobile-header {
         position: absolute;
         top: 50%;
@@ -182,7 +205,7 @@ input[data-autocompleted] {
     }
 
     h2, h3, h4 {
-        font-size: 2em;
+        font-size: 1.5em;
         line-height: 40px;
     }
 
@@ -208,7 +231,29 @@ input[data-autocompleted] {
 }
 
 
+@media screen and (min-width: 730px) {
+    .absolute-vertical-center-tablet-desktop {
+        position: absolute;
+        top: 50%;
+        left: 1.75rem !important;
+        transform: translate(-0%, -50%);
+    }
+
+    h1{
+        line-height: 45px;
+    }
+
+    p {
+        line-height: 29px ;
+    }
+}
+
+
 @media screen and (min-width: 1024px) {
+
+    h1 {
+        line-height: 65px;
+    }
 
     .object-custom-top-position {
         object-position: 0% 10%;
@@ -285,8 +330,8 @@ input[data-autocompleted] {
 
 
     @keyframes text-bottom-to-top {
-        0% {margin-top: 40px}
-        40% {margin-top: 40px}
+        0% {transform: translateY(40px)}
+        40% {transform: translateY(40px)}
         100% {margin-top: 0}
     }
 
