--- a/src/index.css
+++ b/src/index.css
@@ -65,7 +65,7 @@ h1 {
 
 h2 {
     font-size:3em;
-    line-height: 90px;
+    line-height: 65px;
 }
 
 h3 {
@@ -171,8 +171,8 @@ input:-webkit-autofill:active{
     -webkit-mask-image: -webkit-radial-gradient(white, black);
 }
 
-.MuiAccordion-rounded {
-    border-radius: 10px !important;
+.rowfit-grid {
+    grid-template-rows: auto 1fr;
 }
 
 
