--- a/src/index.css
+++ b/src/index.css
@@ -33,10 +33,8 @@
 
 
 body {
-    background-color: #303539;
-    color : white;
-    min-height: 100vh;
-    overflow: hidden;
+    background-color: white;
+    color : black;
     min-height: -webkit-fill-available !important;
 }
 
@@ -47,11 +45,12 @@ html {
 }
 
 
-
-
 h1, h2, h3, h4, h5, h6, span {
+    white-space: nowrap;
     font-weight: 700;
 }
+
+
 
 p, li {
     font-weight: 400;
@@ -59,13 +58,9 @@ p, li {
     line-height: 30px;
 }
 
-h1 {
-    font-size: 3.5em;
-}
-
 h2 {
-    font-size:3em;
-    line-height: 65px;
+    font-size:80px;
+    line-height: 80px;
 }
 
 h3 {
@@ -86,14 +81,14 @@ input, textarea{
     border-radius: 10px;
     margin-top: 0.3em;
     padding: 10px;
-    background-color: #292D30 !important;
-    color : white !important;
+    color : black !important;
+    border : 1px solid rgb(0, 0, 0, 10%);
 }
 
 
 
 input:focus, textarea:focus {
-    outline: 1px solid white !important;
+    outline: 1px solid transparent !important;
 }
 
 
@@ -120,6 +115,12 @@ input:-webkit-autofill:active{
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+}
+
+.absolute-vertical-center-header{
+    position: absolute;
+    top: 50%;
+    transform: translate(-0%, -50%);
 }
 
 
@@ -157,7 +158,7 @@ input:-webkit-autofill:active{
 }
 
 .white-inner-shadow {
-    background :linear-gradient(0deg, #303639, transparent 50%);
+    background :linear-gradient(0deg, white, transparent 50%);
 }
 
 .player-wrapper {
@@ -180,8 +181,8 @@ input:-webkit-autofill:active{
 
 
 
+@media screen and (max-width: 728px) {
 
-@media screen and (max-width: 768px) {
 
     .absolute-vertical-center-mobile {
         position: absolute;
@@ -196,18 +197,17 @@ input:-webkit-autofill:active{
         top: 50%;
         transform: translate(-0%, -50%);
     }
-}
 
-
-@media screen and (max-width: 1024px) {
     h1 {
-        font-size: 2.2em;
-        line-height: 50px;
+        font-size: 2em;
+        line-height: 40px;
+        white-space: normal;
     }
 
     h2, h3, h4 {
-        font-size: 1.5em;
-        line-height: 40px;
+        font-size: 1.8em;
+        line-height: 30px;
+        white-space: normal;
     }
 
 
@@ -227,34 +227,35 @@ input:-webkit-autofill:active{
     .rounded-header-mobile-tablet {
         border-radius: 30px;
     }
-
-
 }
 
 
-@media screen and (min-width: 730px) {
-    .absolute-vertical-center-tablet-desktop {
-        position: absolute;
-        top: 50%;
-        left: 1.75rem !important;
-        transform: translate(-0%, -50%);
-    }
-
-    h1{
-        line-height: 45px;
-    }
-
-    p {
-        line-height: 29px ;
-    }
-}
-
-
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: 728px) and (max-width: 1024px) {
 
     h1 {
-        line-height: 65px;
+        font-size: 3em;
+        line-height: 50px;
     }
+
+    h2 {
+        line-height: 45px;
+        font-size: 2.4em;
+    }
+}
+
+
+@media screen and (min-width: 1024px) and (max-width: 1280px) {
+
+    h1 {
+        font-size: 3em;
+        line-height: 50px;
+    }
+
+   h2 {
+        font-size: 2.5em;
+        line-height: 40px;
+    }
+
 
     .object-custom-top-position {
         object-position: 0% 10%;
@@ -353,7 +354,19 @@ input:-webkit-autofill:active{
 
 }
 
+@media screen and (min-width: 1280px) {
 
+    h1 {
+        line-height: 70px;
+        font-size: 4.5em;
+    }
+
+    h2 {
+        font-size: 3em;
+        line-height: 50px;
+    }
+
+}
 
 
 
